# jragmunch-cli

./: .gitignore  AskClaude.py  LICENSE  PRD.md  README.md  benchmark_results.json  demo.ps1  pyproject.toml
benchmarks/: token_reduction.py
src/jragmunch/: __init__.py  auth.py  cli.py  config.py  defaults.py  fanout.py  gitctx.py  mcp_config.py  parsers.py  runner.py  runtime.py
src/jragmunch/verbs/: ask.py  changelog.py  doctor.py  index.py  refactor.py  review.py  run_passthrough.py  sweep.py  tests_gen.py
tests/: test_auth.py  test_config.py  test_defaults.py  test_mcp_config.py  test_parsers.py  test_runner.py  test_runtime.py  test_v12_verbs.py  test_verb_prompts.py
